tests/paczka1/small_fuzzy/42098928.err
Error in line 7: lVegh S421 80,25
Error in line 10: S421 S102 50,9
Error in line 12: 1vlHsxD S421 72,3
